# labs

./: .gitignore  CMakeLists.txt  README.md  command_processor.cpp  command_processor.h  file_reader.cpp  file_reader.h  fuel_model.cpp  fuel_model.h  fuel_price.h  log_ai.txt  main  main.cpp  main_window.cpp  main_window.h  parse_exception.h  result.txt  test.txt  test_all.cpp  test_command.txt  test_copy.txt  test_fuel_model.cpp
